# mlflow-meetup

./: Makefile  README.md  call_model.sh  download_gpt_dataset.sh  pyproject.toml
notebooks/: gpt_dataset_analysis.ipynb
src/mlflow_demo/: optuna_demo.py
src/mlflow_demo/fasttext_model/: test_model.py  train_model.py
